k8s-Dir/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend-prod
spec:
  selector:
    app: backend
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
